--- a/news-app/src/index.css
+++ b/news-app/src/index.css
@@ -45,6 +45,16 @@ html, body {
   font-family: Geneva, Tahoma, sans-serif;
   width: 100vw;
   height: 100vh;
+  background-color: #DAD2BC;
+}
+
+h2 {
+  font-size: .9rem;
+  font-weight: 600;
+}
+
+p {
+  font-size: .75rem;
 }
 
 a {
@@ -61,4 +71,44 @@ a {
 nav {
   display: flex;
   gap: 2em;
+}
+
+/* main section */
+.main-section {
+  padding: 1em;
+  max-width: 80vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /* flex-wrap: wrap; */
+  gap: 1em;
+  /* grid-template-rows: 400px;
+  grid-auto-rows: 200px; */
+}
+
+.article-container {
+  height: 300px;
+  width: 200px;
+  border: 1px solid #A99985;
+  border-radius: 6px;
+  display: flex;
+  overflow: hidden;
+  background-color: #f5f1ed;
+}
+
+.article-container:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.article-inner {
+  text-decoration: none;
+}
+
+.article-text {
+  padding: 5px;
+}
+
+.img-container {
+  min-height: 110px;
+  background-color: #70798C;
+  text-indent: 5px;
 }
