--- a/news-app/src/index.css
+++ b/news-app/src/index.css
@@ -43,19 +43,21 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Geneva, Tahoma, sans-serif;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: #DAD2BC;
 }
 
 h2 {
-  font-size: .9rem;
+  font-size: .7rem;
   font-weight: 600;
+  line-height: 14px;
+  margin-bottom: .5em;
 }
 
-p {
-  font-size: .75rem;
-}
+/* p {
+  font-size: .65rem;
+} */
 
 a {
   color: black;
@@ -65,17 +67,29 @@ a {
 
 .header {
   width: 100%;
-  background-color: pink;
+  padding: .5em 1em;
+  background-color: navy;
+  color: #f5f1ed;
+  display: flex;
+  justify-content: space-between;
+  font-size: .75rem;
+  text-transform: capitalize;
+}
+
+.header > a,
+nav > a {
+  color: #f5f1ed;
 }
 
 nav {
   display: flex;
-  gap: 2em;
+  gap: 1em;
 }
 
 /* main section */
 .main-section {
-  padding: 1em;
+  margin: 0 auto;
+  padding: 1em 0;
   max-width: 80vw;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -86,13 +100,14 @@ nav {
 }
 
 .article-container {
-  height: 300px;
-  width: 200px;
+  height: 250px;
+  width: 150px;
   border: 1px solid #A99985;
   border-radius: 6px;
   display: flex;
   overflow: hidden;
   background-color: #f5f1ed;
+  font-size: .65rem;
 }
 
 .article-container:hover {
@@ -107,8 +122,14 @@ nav {
   padding: 5px;
 }
 
-.img-container {
-  min-height: 110px;
+.article-img-container {
+  height: 110px;
+  width: 100%;
   background-color: #70798C;
   text-indent: 5px;
+}
+
+.article-img-container > img {
+  object-fit: cover;
+  height: 100%;
 }
