--- a/news-app/src/index.css
+++ b/news-app/src/index.css
@@ -42,15 +42,22 @@ p, h1, h2, h3, h4, h5, h6 {
 html, body {
   margin: 0;
   padding: 0;
-  font-family: Geneva, Tahoma, sans-serif;
+  font-family: Roboto, Tahoma, sans-serif;
   width: 100%;
   height: 100vh;
   background-color: #C4C4C4;
 }
 
+h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
 h2 {
-  font-size: .7rem;
-  font-weight: 600;
+  font-family: "Playfair Display", serif;
+  font-size: 1rem;
+  font-weight: bold;
   line-height: 14px;
   margin-bottom: .5em;
 }
@@ -91,19 +98,30 @@ nav {
 /* main section */
 .main-section {
   margin: 0 auto;
-  padding: 1em 0;
+  padding-bottom: 1em;
   max-width: 80vw;
+
+}
+
+.featured-article > .article-container {
+  width: 100%;
+  height: 200px;
+  margin: 1em 0 2em 0;
+}
+
+.article-grid {
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   /* flex-wrap: wrap; */
-  gap: 1em;
+  gap: 1.25em;
   /* grid-template-rows: 400px; */
   /* grid-auto-rows: 200px; */
 }
 
 .article-container {
   height: 250px;
-  width: 150px;
+  /* width: 150px; */
   border: 1px solid #A99985;
   border-radius: 6px;
   display: flex;
@@ -145,7 +163,7 @@ nav {
   padding-top: .75em;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 760px) {
   h2 {
     font-size: .8rem;
   }
@@ -154,21 +172,27 @@ nav {
     height: 3em;
     font-size: medium;
   }
+  
+  .featured-article > .article-container {
+    width: 100%;
+    height: 289px;
+  }
 
-  .main-section {
+  .article-grid {
     grid-template-columns: repeat(3, minmax(100px, 1fr));
-    gap: 1em;
-    max-width: 600px;
+    gap: 1.5em;
+    /* max-width: 600px; */
+    /* margin-left: 0; */
   }
 
   .article-container {
-    height: 300px;
-    width: 180px;
-    font-size: .7rem;
+    height: 230px;
+    width: 203px;
+    font-size: .65rem;
   }
 }
 
-@media (min-width: 900px) {
+@media (min-width: 1000px) {
   h2 {
     font-size: .9rem;
   }
@@ -178,15 +202,32 @@ nav {
     font-size: large;
   }
 
+
   .main-section {
+    border: 2px solid green;
+    max-width: 90vw;
+    padding: 0 3em;
+  }
+
+  .featured-article {
+    /* width: 80%; */
+    height: 400px;
+  }
+  
+  .featured-article > .article-container {
+    width: 75%;
+  }
+
+  .article-grid {
     grid-template-columns: repeat(4, minmax(100px, 1fr));
-    gap: 1em;
+    /* gap: 1.5em; */
     max-width: 1000px;
   }
 
   .article-container {
     height: 300px;
-    width: 220px;
+    width: 230px;
     font-size: .8rem;
   }
+
 }
