--- a/news-app/src/index.css
+++ b/news-app/src/index.css
@@ -103,11 +103,36 @@ nav {
 
 }
 
-.featured-article > .article-container {
+.featured-article > .article-inner > .article-container {
   width: 100%;
   height: 200px;
   margin: 1em 0 2em 0;
+  flex-direction: row;
+  position: relative;
 }
+
+.featured-article > .article-inner > .article-container > .article-img-container > img {
+  width: 100%;
+}
+
+.featured-article > .article-inner > .article-container > .article-text > h2 {
+  margin: 1em;
+  font-size: 1.2rem;
+  line-height: 20px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 80%;
+  color: white;
+  text-shadow: 0px 0px 20px #aaaaaa;
+  text-align: left;
+  z-index: 2;
+}
+
+.featured-article > .article-inner > .article-container > .article-text > p {
+  display: none;
+}
+
 
 .article-grid {
   margin: 0 auto;
@@ -122,11 +147,12 @@ nav {
 .article-container {
   height: 250px;
   /* width: 150px; */
-  border: 1px solid #A99985;
+  /* border: 1px solid #A99985; */
   border-radius: 6px;
   display: flex;
+  flex-direction: column;
   overflow: hidden;
-  background-color: #f5f1ed;
+  /* background-color: #f5f1ed; */
   font-size: .65rem;
 }
 
@@ -143,10 +169,12 @@ nav {
 }
 
 .article-img-container {
-  height: 110px;
+  /* height: 110px; */
   width: 100%;
   background-color: #70798C;
   text-indent: 5px;
+  border-radius: 6px;
+
 }
 
 .article-img-container > img {
@@ -210,14 +238,40 @@ nav {
   }
 
   .featured-article {
-    /* width: 80%; */
+    max-width: 1000px;
     height: 400px;
-  }
-  
-  .featured-article > .article-container {
-    width: 75%;
+    margin: 2.5em auto 0;
   }
 
+  .featured-article > .article-inner > .article-container > .article-img-container > img{
+    width: 100%;
+  }
+
+  .featured-article > .article-inner > .article-container {
+    font-size: 1rem;
+    gap: 20px;
+    align-items: center;
+    height: 300px;
+  }
+
+  .featured-article > .article-inner > .article-container > .article-text {
+    width: 40%;
+    height: 100%;
+  }
+
+
+  .featured-article > .article-inner > .article-container > .article-text > h2 {
+    line-height: 1.5rem;
+    position: static;
+    color: black;
+    margin: 0 0 .5em 0;
+  }
+  
+  .featured-article > .article-inner > .article-container > .article-text > p {
+    display: block;
+    font-size: .9rem;
+  }
+  
   .article-grid {
     grid-template-columns: repeat(4, minmax(100px, 1fr));
     /* gap: 1.5em; */
