--- a/news-app/src/index.css
+++ b/news-app/src/index.css
@@ -63,7 +63,8 @@ h2 {
 }
 
 /* p {
-  font-size: .65rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 } */
 
 a {
@@ -146,8 +147,6 @@ nav {
 
 .article-container {
   height: 250px;
-  /* width: 150px; */
-  /* border: 1px solid #A99985; */
   border-radius: 6px;
   display: flex;
   flex-direction: column;
@@ -207,6 +206,7 @@ nav {
   }
 
   .article-grid {
+    margin-top: 3em;
     grid-template-columns: repeat(3, minmax(100px, 1fr));
     gap: 1.5em;
     /* max-width: 600px; */
@@ -230,16 +230,14 @@ nav {
     font-size: large;
   }
 
-
   .main-section {
-    border: 2px solid green;
     max-width: 90vw;
     padding: 0 3em;
   }
 
   .featured-article {
     max-width: 1000px;
-    height: 400px;
+    height: 375px;
     margin: 2.5em auto 0;
   }
 
@@ -259,7 +257,6 @@ nav {
     height: 100%;
   }
 
-
   .featured-article > .article-inner > .article-container > .article-text > h2 {
     line-height: 1.5rem;
     position: static;
@@ -274,8 +271,8 @@ nav {
   
   .article-grid {
     grid-template-columns: repeat(4, minmax(100px, 1fr));
-    /* gap: 1.5em; */
     max-width: 1000px;
+    margin-top: 0;
   }
 
   .article-container {
